fix(styles): on mobile

--- a/src/css/partials/_aboutMe.scss
+++ b/src/css/partials/_aboutMe.scss
@@ -3,7 +3,7 @@
   border-bottom: 1px solid $secondary-color;
   padding: 60px 0px;
   h2 {
-    margin-bottom: 40px;
+    margin-bottom: clamp(30px, 1.5vw, 40px);
   }
   h2,
   p {
