--- a/src/css/partials/_hero.scss
+++ b/src/css/partials/_hero.scss
@@ -18,7 +18,7 @@
       font-size: clamp(30px, 2.5vw, 50px);
     }
     h1 {
-      font-size: clamp(45px, 4vw, 75px);
+      font-size: clamp(35px, 5vw, 75px);
       letter-spacing: 2px;
       margin: 10px 0px;
     }
